<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="#FFFBF3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibBack"
                android:src="@drawable/ic_back_icon"
                android:background="@android:color/transparent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_header_text"
                android:layout_below="@+id/ibBack"
                android:layout_marginTop="80dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                style="@style/textViewMontserratExtraBoldStyle"
                android:text="@string/enter_your_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_para_text"
                android:layout_below="@+id/tv_header_text"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                style="@style/textViewMontserratSemiBoldStyle"
                android:text="@string/hello_welcome_back_to_our_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_below="@id/tv_para_text"
                android:layout_marginTop="54dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white" >

                <RelativeLayout
                    android:id="@+id/rl_country_code_wrapper"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginTop="36dp"
                    android:layout_marginStart="24dp"
                    android:layout_width="100dp"
                    android:layout_height="60dp">

                    <LinearLayout
                        android:layout_centerInParent="true"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_flag_icon"
                            android:src="@drawable/ic_indian_flag_icon"
                            android:layout_width="35dp"
                            android:layout_height="25dp" />

                        <TextView
                            android:layout_marginStart="5dp"
                            style="@style/textViewInterRegularStyle"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:text="+91" />

                    </LinearLayout>

                </RelativeLayout>

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_background"
                    android:paddingStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/_0000000000"
                    android:letterSpacing="0.5"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:inputType="phone"
                    android:maxLength="10"

                    android:textColorHint="@color/black"
                    style="@style/textViewMontserratMediumStyle"
                    android:lineSpacingExtra="5dp"
                    android:layout_toEndOf="@id/rl_country_code_wrapper"
                    android:layout_marginTop="36dp"
                    android:layout_marginStart="10dp"/>

                <Button
                    android:id="@+id/btnRequestOtp"
                    android:layout_below="@id/etPhoneNumber"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="Request Otp"
                    android:textAllCaps="false"
                    android:background="@drawable/button_shape"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:textSize="16sp"
                    android:layout_marginBottom="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />

                <LinearLayout
                    android:id="@+id/ll_divider_wrapper"
                    android:layout_below="@id/btnRequestOtp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#1A020202">

                        </View>
                    </RelativeLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_gravity="center_vertical"
                        android:text="Login With"
                        android:textColor="#020202">

                    </TextView>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#1A020202">

                        </View>
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_below="@id/ll_divider_wrapper"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:background="@drawable/edit_text_background"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="60dp">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/iv_google"
                                android:src="@drawable/ic_google_icon"
                                android:layout_width="26dp"
                                android:layout_height="26dp" />

                            <TextView
                                style="@style/textViewMontserratSemiBoldStyle14sp"
                                android:text="Google"
                                android:layout_marginStart="12dp"
                                android:layout_gravity="center_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_google_wrapper"
                        android:background="@drawable/edit_text_background"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="60dp">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/iv_facebook"
                                android:src="@drawable/ic_facebook_icon"
                                android:layout_width="26dp"
                                android:layout_height="26dp" />

                            <TextView
                                style="@style/textViewMontserratSemiBoldStyle14sp"
                                android:text="Facebook"
                                android:layout_marginStart="12dp"
                                android:layout_gravity="center_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>